fixed spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@ h1,h2 {
   color : white;
   font-weight: 600;
   font-family: sora;
+  margin: 0;
 }
 
 h2 {
